--- a/index.html
+++ b/index.html
@@ -311,5 +311,29 @@
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer_navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="#" class="footer_link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer_link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer_link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer_link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer_link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer_copyright">
+                        Build by <a href="#" class="footer__link">Andrii Mysaka</a> with Jonas Schmedtmann.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
