--- a/index.html
+++ b/index.html
@@ -318,18 +318,18 @@
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                    <div class="footer_navigation">
+                    <div class="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer_link">Company</a></li>
-                            <li class="footer__item"><a href="#" class="footer_link">Contact us</a></li>
-                            <li class="footer__item"><a href="#" class="footer_link">Careers</a></li>
-                            <li class="footer__item"><a href="#" class="footer_link">Privacy policy</a></li>
-                            <li class="footer__item"><a href="#" class="footer_link">Terms</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-1-of-2">
-                    <p class="footer_copyright">
+                    <p class="footer__copyright">
                         Build by <a href="#" class="footer__link">Andrii Mysaka</a> with Jonas Schmedtmann.
                     </p>
                 </div>
