--- a/index.html
+++ b/index.html
@@ -358,7 +358,16 @@
 
         <div class="popup">
             <div class="popup__content">
-                POPUP
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary">Start booking now</h2>
+                    <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab corporis debitis delectus doloribus fugit illo laboriosam libero mollitia nemo nisi quasi quod, similique ut! Atque error laudantium perferendis sapiente temporibus!</p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
             </div>
         </div>
 
