Building a Pure CSS Popup - Part 5

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
                 </div>
                 <div class="popup__right">
-                    <a href="#section-tours" class="popup__close"></a>
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                     <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                     <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab corporis debitis delectus doloribus fugit illo laboriosam libero mollitia nemo nisi quasi quod, similique ut! Atque error laudantium perferendis sapiente temporibus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab corporis debitis delectus doloribus fugit illo laboriosam libero mollitia nemo nisi quasi quod, similique ut! Atque error laudantium perferendis sapiente temporibus!</p>
